refactor: apply /ship-it pipeline — Java 25 LTS + infra + integration tests
Java 25 LTS migration
- Add .java-version and bump .mise.toml Java pin to temurin-25.0.2+10.0.LTS
- pom.xml: maven.compiler.{source,target}=25, enforcer requireJavaVersion=[25,)

Dependency drop-in upgrades (Renovate-trackable)
- Jackson 3.1.1 → 3.1.2, OWASP dependency-check 12.2.0 → 12.2.1
- google-java-format 1.28.0 → 1.35.0, gitleaks 8.29.0 → 8.30.1
- trivy 0.69.1 → 0.69.3, renovate 43.104.8 → 43.119.0

Makefile rewrite (/project-review + /makefile skill)
- Remove sudo from deps-act/deps-maven; install to $HOME/.local/bin
- renovate-bootstrap: switch nvm → mise (reads .nvmrc)
- NODE_VERSION/JAVA_VERSION derived from .nvmrc/.java-version
- Add format, format-check, secrets, trivy-fs, mermaid-lint, static-check,
  vulncheck alias, deps-gitleaks, deps-trivy, deps-prune[-check]
- mermaid-lint skipped under act (docker-in-docker unavailable)
- ci target: static-check → test → integration-test → coverage-check → build
- ci-run: docker container prune + shell-time secret flags

CI workflow (/ci-workflow skill)
- Canonical job names: static-check / test / build
- Use java-version-file: .java-version (single source of truth)
- Trivy filesystem scan folded into make static-check (no inline YAML)
- Collapse Test with coverage + Verify threshold → make coverage-check
- Rename artifact coverage-report → coverage
- Tag-gate cve-check (startsWith refs/tags/v)
- New integration-test job; ci-pass gate aggregates all jobs
- paths-ignore DRY'd via YAML anchor
- cleanup-runs.yml: remove dead container-image step, rename to Cleanup

Renovate (.nvmrc tracking)
- Add nvm manager to enabledManagers

Test coverage — integration layer (/test-coverage-analysis Phase 4 option 2)
- pom.xml: integration-test Maven profile (Failsafe + Surefire skip);
  org.wiremock:wiremock:3.13.1 test-scope dep
- Makefile integration-test target (mvn verify -P integration-test)
- src/test/java/http/client/okhttp/OkHttpClientIT.java — 